@@ -1,2 +1,2 @@
 SIMUPOP_VER = "snapshot"
-SIMUPOP_REV = "151:154"
+SIMUPOP_REV = "156M"
